fix: scroll-to-top button on ios

--- a/src/components/Main/Scroller/Scroller.css
+++ b/src/components/Main/Scroller/Scroller.css
@@ -10,7 +10,6 @@
     color: #6c757d;
     cursor: pointer;
     transition: right 0.2s ease-in;
-    transition: top 0.2s ease-in;
 }
 
 #scroller:active {
